// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorListDrawer component renders a MonitorListDrawer when there are many checks 1`] = `
<styled.div>
  <EuiFlexGroup>
    <EuiFlexItem
      grow={true}
    >
      <EuiLink
        href="https://expired.badssl.com"
        target="_blank"
      >
        https://expired.badssl.com
        <EuiIcon
          color="subbdued"
          size="s"
          type="popout"
        />
      </EuiLink>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
  <MonitorStatusList
    checks={
      Array [
        Object {
          "monitor": Object {
            "ip": "127.0.0.1",
            "status": "up",
          },
          "timestamp": "121",
        },
        Object {
          "monitor": Object {
            "ip": "127.0.0.2",
            "status": "down",
          },
          "timestamp": "123",
        },
        Object {
          "monitor": Object {
            "ip": "127.0.0.3",
            "status": "up",
          },
          "timestamp": "125",
        },
      ]
    }
  />
  <MostRecentError
    error={
      Object {
        "message": "Get https://expired.badssl.com: x509: certificate has expired or is not yet valid",
        "type": "io",
      }
    }
    monitorId="foo"
  />
</styled.div>
`;

exports[`MonitorListDrawer component renders a MonitorListDrawer when there is only one check 1`] = `
<styled.div>
  <EuiFlexGroup>
    <EuiFlexItem
      grow={true}
    >
      <EuiLink
        href="https://expired.badssl.com"
        target="_blank"
      >
        https://expired.badssl.com
        <EuiIcon
          color="subbdued"
          size="s"
          type="popout"
        />
      </EuiLink>
    </EuiFlexItem>
  </EuiFlexGroup>
  <EuiSpacer
    size="s"
  />
  <MonitorStatusList
    checks={
      Array [
        Object {
          "monitor": Object {
            "ip": "127.0.0.1",
            "status": "up",
          },
          "timestamp": "121",
        },
      ]
    }
  />
  <MostRecentError
    error={
      Object {
        "message": "Get https://expired.badssl.com: x509: certificate has expired or is not yet valid",
        "type": "io",
      }
    }
    monitorId="foo"
  />
</styled.div>
`;
